<resources>
    <string name="app_name">Aglomeranão</string>
    <string name="create_occurrence">Criar</string>
    <string name="welcome">Bem vindo(a), </string>
    <string name="welcome_back">Bem vindo(a) de volta, </string>
    <string name="location_permission_needed">É necessário dar permissão de acesso à localização do dispositivo</string>
    <string name="title_activity_maps">Selecione um lugar</string>
    <string name="default_info_title">Localização padrão</string>
    <string name="default_info_snippet">Nenhum local encontrado, porque a permissão de acesso à localização está desabilitada.</string>
    <string name="option_get_place">Buscar local</string>
    <string name="pick_place">Escolha um local</string>
    <string name="occurrence_time_hint">Horário da ocorrência</string>
    <string name="ocurrence_description_hint">Descrição da ocorrência (dê o máximo de detalhes possível)</string>
    <string name="occurrence_date_hint">Data da ocorrência</string>
    <string name="save">Salvar</string>
    <string name="occurrence_saved">Ocorrência salva com sucesso</string>
    <string name="email">Email</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="date_time">Data/Hora</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor, lacus a interdum interdum, tortor urna aliquet orci, ac cursus turpis leo id lacus. Curabitur dictum tempus luctus. Quisque posuere lorem quis pellentesque lacinia. Nulla non lacus eu nulla varius dapibus nec a metus. Maecenas auctor vestibulum augue at pretium. Aliquam mattis rhoncus feugiat. Proin malesuada lorem in est elementum elementum. Curabitur finibus auctor ornare.</string>
    <string name="icon">Ícone</string>
    <string name="place_name">Nome do lugar</string>
</resources>